# UVC_Multi_Capture

./: .gitignore  CMakeLists.txt  README.md  main.cpp  start.sh  usbCamera.cpp  usbCamera.h
